welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: not found: value setColorBrosse
		setColorBrosse(T(comp + decalage + 1))
                ^